--- a/package.json
+++ b/package.json
@@ -9,5 +9,22 @@
   "author": "Lambda School",
   "devDependencies": {
     "nodemon": "^1.19.4"
-  }
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "helmet": "^3.21.2",
+    "knex": "^0.20.1",
+    "sqlite3": "^4.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gspayonk/webdb-ii-challenge.git"
+  },
+  "keywords": [],
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gspayonk/webdb-ii-challenge/issues"
+  },
+  "homepage": "https://github.com/gspayonk/webdb-ii-challenge#readme"
 }
